--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇦🇺 澳大利亚-1007.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇨🇳 中国-5.56MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.53MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
   - {name: 🇨🇳 中国-8.22MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.35MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-927.6KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-6.45MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.39MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇨🇳 中国-1.95MB/s(Youtube:不良林), server: 116.129.254.65, port: 63088, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 116.129.254.65}}
   - {name: 🇨🇳 中国-308.2KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.27MB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇷🇺 俄罗斯联邦-472.7KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-4.14MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30080, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇦🇺 澳大利亚-1007.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-927.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-308.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-472.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇦🇺 澳大利亚-1007.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-927.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-308.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-472.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,15 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇦🇺 澳大利亚-1007.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-927.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-308.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-472.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,30 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇦🇺 澳大利亚-1007.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-927.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-308.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-472.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇦🇺 澳大利亚-1007.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-927.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-308.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-472.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇦🇺 澳大利亚-1007.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-927.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-308.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-472.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇦🇺 澳大利亚-1007.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.56MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-8.22MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.35MB/s(Youtube:不良林)
-      - 🇫🇷 法国-927.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.39MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-308.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-472.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
