--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇻🇳 越南-160.9KB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-308.2KB/s(Youtube:不良林), server: ma-zf.jiashumao.net, port: 22983, type: trojan, password: 375e1e34-8f6f-39be-bdb9-52080f546d4d, sni: ma-zf.jiashumao.net, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.53MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.27MB/s(Youtube:不良林), server: 159.27.90.254, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 159.27.90.254}}
-  - {name: 🇨🇳 中国-9.53MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.14MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30080, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.16MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.64MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 27e58714-2c0b-4fa4-afb6-b91ec041b1cf, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.69MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: caca1a4b-0a20-4a66-85d2-08b02c1afb02, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.45MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-151.8KB/s(Youtube:不良林), server: 203.138.98.199, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.79MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20110, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-668.5KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 台湾-444.7KB/s(Youtube:不良林), server: hinet.52147.top, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.54MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30170, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.64MB/s(Youtube:不良林), server: 165.154.253.49, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.39MB/s(Youtube:不良林), server: 116.129.254.65, port: 63088, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 116.129.254.65}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-160.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-151.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.79MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-668.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-444.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇻🇳 越南-160.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-151.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.79MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-668.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-444.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇻🇳 越南-160.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-151.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.79MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-668.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-444.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-444.7KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇻🇳 越南-160.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-151.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.79MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-668.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-444.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇻🇳 越南-160.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-151.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.79MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-668.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-444.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-160.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-151.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.79MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-668.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-444.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇻🇳 越南-160.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.69MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.45MB/s(Youtube:不良林)
+      - 🇯🇵 日本-151.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.79MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-668.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-444.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.39MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
