--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-9.02MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30130, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.82MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.43MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-5.49MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30120, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.81MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-437.0KB/s(Youtube:不良林), server: hnyd.52147.top, port: 20160, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.00MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-2.04MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇳 中国-6.42MB/s(Youtube:不良林), server: 116.129.253.177, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-437.0KB/s(Youtube:不良林), server: hnyd.52147.top, port: 20160, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.92MB/s(Youtube:不良林), server: 203.138.98.199, port: 28000, type: trojan, password: 52a98419-efab-4c34-b4cc-4e2a7bc37029, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.47MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 未知国家-2.89MB/s(Youtube:不良林), server: vietnam.hn15.shopvpn.net, port: 80, type: vmess, uuid: 23959a9d-be8b-45d7-b284-5a3f9f29039a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: quangtien.akamaized.net}}
+  - {name: 🇯🇵 日本-365.2KB/s(Youtube:不良林), server: 203.138.98.199, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-1.64MB/s(Youtube:不良林), server: 20.205.39.179, port: 12388, type: trojan, password: 9ff4a104-d00e-4867-96e7-6f5f63070005, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.95MB/s(Youtube:不良林), server: hnyd.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 未知国家-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-365.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-9.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 未知国家-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-365.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 未知国家-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-365.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-9.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 未知国家-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-365.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-9.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 未知国家-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-365.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 未知国家-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-365.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-9.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.43MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.49MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.47MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.32MB/s(Youtube:不良林)
+      - 未知国家-2.89MB/s(Youtube:不良林)
+      - 🇯🇵 日本-365.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.95MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.19MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
